--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
+@section BodySection{
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
@@ -10,6 +11,17 @@
 
 <div class="row">
     <div class="col-md-4">
+        <div id="carsList">
+            <ul>
+                <li>Audi A4</li>
+                <li>Audi A5</li>
+                <li>Audi A6</li>
+                <li>Audi A7</li>
+                <li>Audi A8</li>
+            </ul>
+
+        </div>
+
         <h2>Getting started</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
@@ -29,3 +41,19 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+}
+
+@section scripts
+{ 
+<script>
+    var target;
+    $(function () {
+        $('#selectCar').ejDropDownList({
+            targetID: "carsList",
+            watermarkText: "Select a car",
+            width: "100%"
+        });
+    });
+</script>
+}
+
