--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
 
 <div class="row">
     <div class="col-md-4">
+        <input type="text" id="selectCar" />
         <div id="carsList">
             <ul>
                 <li>Audi A4</li>
