--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - TrackSync-Q&A</title>
-    @Styles.Render("~/Content/css")
+    
     @Scripts.Render("~/bundles/modernizr")
-    <link rel="stylesheet" href="https://cdn.syncfusion.com/content/stylesheets/components/bootstrap/Integrity/bootstrap3.7.1.min.css?v1">
     <link rel="stylesheet" href="https://cdn.syncfusion.com/15.1.0.33/js/web/flat-azure/ej.web.all.new.min.css">
 
     <!-- Custom fonts for this template -->
@@ -16,12 +15,12 @@
     @Styles.Render("~/Content/bootstrap.min.css")
     @Styles.Render("~/Content/one-page-wonder.min.css")
 
-    <link rel="stylesheet" href="Content/demo.css">
-    <link rel="stylesheet" href="Content/footer-distributed-with-address-and-phones.css">
+    @Styles.Render("~/Content/demo.css")
+    @Styles.Render("~/Content/footer-distributed-with-address-and-phones.css")
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-
+    @Styles.Render("~/Content/css")
 </head>
 <body>
     <!-- Navigation -->
