--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -46,15 +46,23 @@
                 <div class="col-md-6">
                     <h2>Query Filter</h2>
                     <div id="custom-search-input">
-                        <div class="input-group col-md-12">
-                            <input type="text" class="form-control input-lg" placeholder="Buscar" />
+                        <div class="input-group col-md-12" style="padding-right:0px">
+                            <input type="text" class="form-control col-md-11" placeholder="Search text" />
                             <span class="input-group-btn">
-                                <button class="btn btn-info btn-lg" type="button">
-                                    <i class="glyphicon glyphicon-search"></i>
+                                <button class="btn btn-info btn-lg" type="button" style="border-radius:0px">
+                                    <i class="fa fa-search"></i>
                                 </button>
                             </span>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="search-result" style="margin-top:30px">
+                <h4>
+                  Search Result
+                </h4>
+                <div class="result-data">
+
                 </div>
             </div>
         </div>
@@ -63,15 +71,6 @@
 
 @section scripts
 { 
-<script>
-    var target;
-    $(function () {
-        $('#selectCar').ejDropDownList({
-            targetID: "carsList",
-            watermarkText: "Select a car",
-            width: "100%"
-        });
-    });
-</script>
+<script src="~/Scripts/queryresult.js"></script>
 }
 
