--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -57,12 +57,14 @@
                     </div>
                 </div>
             </div>
-            <div class="search-result" style="margin-top:30px">
+            <div class="searchresult" style="margin-top:30px">
                 <h4>
                   Search Result
                 </h4>
                 <div class="result-data">
+                    <div id="gridsearchResult">
 
+                    </div>
                 </div>
             </div>
         </div>
