--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -47,9 +47,9 @@
                     <h2>Query Filter</h2>
                     <div id="custom-search-input">
                         <div class="input-group col-md-12" style="padding-right:0px">
-                            <input type="text" class="form-control col-md-11" placeholder="Search text" />
+                            <input type="text" class="form-control col-md-11" id="searchtext" placeholder="Search text" />
                             <span class="input-group-btn">
-                                <button class="btn btn-info btn-lg" type="button" style="border-radius:0px">
+                                <button class="btn btn-info btn-lg" id="searchbutton" type="button" style="border-radius:0px">
                                     <i class="fa fa-search"></i>
                                 </button>
                             </span>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
             </div>
-            <div class="searchresult" style="margin-top:30px">
+            <div class="searchresult" style="margin-top:30px;display:none">
                 <h4>
                   Search Result
                 </h4>
