--- a/Content/footer-distributed-with-address-and-phones.css
+++ b/Content/footer-distributed-with-address-and-phones.css
@@ -110,7 +110,7 @@
 
 .footer-distributed .footer-company-about{
 	line-height: 20px;
-	color:  #92999f;
+	color:  #ffff;
 	font-size: 13px;
 	font-weight: normal;
 	margin: 0;
