--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -39,8 +39,8 @@
 }
 
 @section BodySection{
-
-    <section style="margin-top:30px">
+    <img src="~/Content/Images/QueryFinder.jpg" class="img-fluid" style="max-width:120%;margin-left:-80px" alt="Responsive image">
+    <section style="margin-top:-40px">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -70,7 +70,7 @@
         </div>
     </section>
 
-<section class="details-card">
+@*<section class="details-card">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
@@ -123,7 +123,7 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 }
 
 @section scripts
