--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,9 +18,15 @@
 
     @Styles.Render("~/Content/demo.css")
     @Styles.Render("~/Content/footer-distributed-with-address-and-phones.css")
+    @Styles.Render("~/Content/card.css")
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+   
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     @Styles.Render("~/Content/css")
 
 </head>
@@ -28,17 +34,17 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Syncfusion</a>
+            <a class="navbar-brand" href="~/Home/">Syncfusion</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign Up</a>
+                        <a class="nav-link" href="~/Account/Register">Sign Up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Log In</a>
+                        <a class="nav-link" href="~/Account/Login">Log In</a>
                     </li>
                 </ul>
             </div>
@@ -47,50 +53,51 @@
     <div class="container body-content">
         @RenderBody()
         @RenderSection("BodySection", required: false)
-        <hr />
+
         <!-- The content of your page would go here. -->
         <footer class="footer-distributed">
             <div class="footer-left">
                 <h3>Company<span>logo</span></h3>
                 <p class="footer-links">
-                    <a href="#">Home</a>
+                    <a href="~/Home/">Home</a>
                     ·
-                    <a href="#">Blog</a>
+                    <a href="https://blog.syncfusion.com/">Blog</a>
                     ·
-                    <a href="#">Pricing</a>
+                    <a href="https://www.syncfusion.com/sales/products">Pricing</a>
                     ·
-                    <a href="#">About</a>
+                    <a href="https://www.syncfusion.com/company/about-us">About</a>
                     ·
-                    <a href="#">Faq</a>
+                    <a href="https://www.syncfusion.com/faq">Faq</a>
                     ·
-                    <a href="#">Contact</a>
+                    <a href="https://www.syncfusion.com/support/directtrac/incidents/newincident">Contact</a>
                 </p>
-                <p class="footer-company-name">Company Name &copy; 2015</p>
+                <p class="footer-company-name">Copyright © 2001 - 2018 Syncfusion Inc. All Rights Reserved</p>
             </div>
             <div class="footer-center">
                 <div>
                     <i class="fa fa-map-marker"></i>
-                    <p><span>21 Revolution Street</span> Paris, France</p>
+                    <p><span>EYMARD Complex</span> AJ 217, 4th Avenue, Shanthi Colony <span>Chennai-40</span></p>
                 </div>
                 <div>
                     <i class="fa fa-phone"></i>
-                    <p>+1 555 123456</p>
+                    <p>US: +1 919.481.1974</p>
                 </div>
                 <div>
                     <i class="fa fa-envelope"></i>
-                    <p><a href="mailto:support@company.com">support@company.com</a></p>
+                    <p><a href="mailto:info@syncfusion.com">info@syncfusion.com</a></p>
                 </div>
             </div>
             <div class="footer-right">
                 <p class="footer-company-about">
                     <span>About the company</span>
-                    Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+                    Founded in 2001 and headquartered in Research Triangle Park, N.C., Syncfusion has more than 13,000 customers and more than 1 million users, including large financial institutions, Fortune 500 companies, and global IT consultancies.
+
+                    Today we provide 1,000+ controls and frameworks for web, mobile, and desktop development. We provide ready-to-deploy enterprise software for dashboards, reports, data integration, and big data processing. Many customers have saved millions in licensing fees by deploying our software.
                 </p>
                 <div class="footer-icons">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                    <a href="#"><i class="fa fa-github"></i></a>
+                    <a href="https://www.facebook.com/Syncfusion"><i class="fa fa-facebook"></i></a>
+                    <a href="https://twitter.com/Syncfusion"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/company/syncfusion?trk=top_nav_home"><i class="fa fa-linkedin"></i></a>
                 </div>
             </div>
         </footer>
@@ -100,12 +107,13 @@
     @Scripts.Render("~/bundles/bootstrap")
 
     @RenderSection("scripts", required: false)
+
     @Html.EJ().ScriptManager()
     <script src="https://cdn.syncfusion.com/scripts/jquery/Integrity/jquery.sessionall.min.js?v1" defer></script>
     <script src="https://cdn.syncfusion.com/scripts/jquery/Integrity/MicrosoftMvcAjax.js" defer></script>
-    <script src="https://cdn.syncfusion.com/scripts/jquery/Integrity/jquery.all.new.min.js?v1"></script>   
+    <script src="https://cdn.syncfusion.com/scripts/jquery/Integrity/jquery.all.new.min.js?v1"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="~/Scripts/js/jsrender.min.js"></script>
-    <script src="//cdn.syncfusion.com/scripts/components/essentialjs/ej.grid.all_15.min.js"></script>   
+    <script src="//cdn.syncfusion.com/scripts/components/essentialjs/ej.grid.all_15.min.js"></script>
 </body>
 </html>
