--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,57 +1,112 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
 @section Style{
     <style>
-          #gridsearchResult_WaitingPopup{
-                display: none !important;
+
+        #custom-search-input {
+            padding: 3px;
+            border: solid 1px #E4E4E4;
+            border-radius: 6px;
+            background-color: #fff;
+        }
+
+            #custom-search-input input {
+                border: 0;
+                box-shadow: none;
             }
-       #custom-search-input{
-    padding: 3px;
-    border: solid 1px #E4E4E4;
-    border-radius: 6px;
-    background-color: #fff;
-}
 
-#custom-search-input input{
-    border: 0;
-    box-shadow: none;
-}
+            #custom-search-input button {
+                margin: 2px 0 0 0;
+                background: none;
+                box-shadow: none;
+                border: 0;
+                color: #666666;
+                padding: 0 8px 0 10px;
+                border-left: solid 1px #ccc;
+            }
 
-#custom-search-input button{
-    margin: 2px 0 0 0;
-    background: none;
-    box-shadow: none;
-    border: 0;
-    color: #666666;
-    padding: 0 8px 0 10px;
-    border-left: solid 1px #ccc;
-}
+                #custom-search-input button:hover {
+                    border: 0;
+                    box-shadow: none;
+                    border-left: solid 1px #ccc;
+                }
 
-#custom-search-input button:hover{
-    border: 0;
-    box-shadow: none;
-    border-left: solid 1px #ccc;
-}
+            #custom-search-input .glyphicon-search {
+                font-size: 23px;
+            }
 
-#custom-search-input .glyphicon-search{
-    font-size: 23px;
-}
+        * {
+            box-sizing: border-box;
+        }
+             
+        #myVideo {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+        }
 
-    #gridsearchResult_WaitingPopup{
-        display: none;
-    }
+        .content {
+            position: absolute;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+            color: #f1f1f1;
+            width: 100%;
+            padding: 20px;
+            margin-left: -90px;
+        }
+
+        .e-grid .e-rowcell, .e-grid .e-indentcell {
+            border-style: none !important;
+        }
+        .e-grid .e-headercell, .e-grid .e-grouptopleftcell {
+            border-style: none !important;
+        }
+        .e-grid .e-filterbarcell, .e-grid .e-filterbarcelldisabled {
+            border-style: none !important;
+        }
+        .e-grid tr.e-hover {
+            background: #ffb3ec !important;
+        }
+        .e-grid td.e-active, .e-grid .e-form-titlebar {
+            background: #ee0979 !important;
+        }
     </style>
 }
 
+
 @section BodySection{
-    <img src="~/Content/Images/QueryFinder.jpg" class="img-fluid" style="max-width:120%;margin-left:-80px" alt="Responsive image">
-    <section style="margin-top:-40px">
+    <video autoplay muted loop id="myVideo">
+        <source src="/animation.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>
+
+    <div class="content">
+        <h1>Query Filter</h1>
+        <p>A common search engine to filter the queries posted in Stack Overflow, Quora, Github, etc related to the keyword provided. Using this web application, we can provide our response to all the customer / non-customer who posted their queries (either related to Syncfusion or not) anywhere in the few common sites we mentioned above. So that, customer will get satisfied and the problem will be resolved on customer end and customer full filled with good impression about Syncfusion customer experience.</p>
+    </div>
+
+    <script>
+        var video = document.getElementById("myVideo");
+        var btn = document.getElementById("myBtn");
+
+        function myFunction() {
+            if (video.paused) {
+                video.play();
+                btn.innerHTML = "Pause";
+            } else {
+                video.pause();
+                btn.innerHTML = "Play";
+            }
+        }
+    </script>
+    <section style="margin-top:-40px;position:absolute">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h2>Query Filter</h2>
+                <div class="col-md-10" style="margin-left:300px">
+                    <h3 style="color:azure">Search</h3>
                     <div id="custom-search-input">
                         <div class="input-group col-md-12" style="padding-right:0px">
                             <input type="text" class="form-control col-md-11" id="searchtext" placeholder="Search text" />
@@ -66,77 +121,71 @@
             </div>
             <div class="searchresult" style="margin-top:30px;display:none">
                 <h4>
-                  Search Result
+                    Search Result
                 </h4>
                 <div class="result-data">
                     <div id="gridsearchResult">
-
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-@*<section class="details-card">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card-content">
-                    <div class="card-img">
-                        <img src="https://placeimg.com/380/230/nature" alt="">
-                        <span><h4>heading</h4></span>
+    @*<section class="details-card">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card-content">
+                            <div class="card-img">
+                                <img src="https://placeimg.com/380/230/nature" alt="">
+                                <span><h4>heading</h4></span>
+                            </div>
+                            <div class="card-desc">
+                                <h3>Heading</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, voluptatum! Dolor quo, perspiciatis
+                                    voluptas totam
+                                </p>
+                                <a href="#" class="btn-card">Read</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-desc">
-                        <h3>Heading</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, voluptatum! Dolor quo, perspiciatis
-                            voluptas totam
-                        </p>
-                        <a href="#" class="btn-card">Read</a>
+                    <div class="col-md-4">
+                        <div class="card-content">
+                            <div class="card-img">
+                                <img src="https://placeimg.com/380/230/animals" alt="">
+                                <span><h4>heading2</h4></span>
+                            </div>
+                            <div class="card-desc">
+                                <h3>Heading2</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, voluptatum! Dolor quo, perspiciatis
+                                    voluptas totam
+                                </p>
+                                <a href="#" class="btn-card">Read</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card-content">
+                            <div class="card-img">
+                                <img src="https://placeimg.com/380/230/tech" alt="">
+                                <span><h4>heading3</h4></span>
+                            </div>
+                            <div class="card-desc">
+                                <h3>Heading3</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, voluptatum! Dolor quo, perspiciatis
+                                    voluptas totam
+                                </p>
+                                <a href="#" class="btn-card">Read</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card-content">
-                    <div class="card-img">
-                        <img src="https://placeimg.com/380/230/animals" alt="">
-                        <span><h4>heading2</h4></span>
-                    </div>
-                    <div class="card-desc">
-                        <h3>Heading2</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, voluptatum! Dolor quo, perspiciatis
-                            voluptas totam
-                        </p>
-                        <a href="#" class="btn-card">Read</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card-content">
-                    <div class="card-img">
-                        <img src="https://placeimg.com/380/230/tech" alt="">
-                        <span><h4>heading3</h4></span>
-                    </div>
-                    <div class="card-desc">
-                        <h3>Heading3</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam, voluptatum! Dolor quo, perspiciatis
-                            voluptas totam
-                        </p>
-                        <a href="#" class="btn-card">Read</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>*@
+        </section>*@
 }
-
 @section scripts
-{ 
-
-<script src="~/Scripts/js/WaitingPopup.js"></script>
-<script src="~/Scripts/queryresult.js"></script>
+{
+    <script src="~/Scripts/queryresult.js"></script>
 }
-
