--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="~/Scripts/js/jsrender.min.js"></script>
     <script src="https://cdn.syncfusion.com/scripts/components/essentialjs/ej.grid.all_15.min.js"></script>
-
+    <script src="~/Scripts/js/moment.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
