--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -55,9 +55,11 @@
             bottom: 0;
             background: rgba(0, 0, 0, 0.5);
             color: #f1f1f1;
-            width: 100%;
+            width: 109%;
             padding: 20px;
             margin-top: 90px;
+            margin-left:-70px;
+            padding-left:40px;
         }
 
         .e-grid .e-rowcell, .e-grid .e-indentcell {
@@ -104,10 +106,10 @@
             }
         }
     </script>
-    <section style="margin-top:-40px;position:absolute">
-        <div class="container">
+    <section style="margin-top:40px;position:absolute;padding:0px;">
+        <div class="container" style="min-height:250px;">
             <div class="row">
-                <div style="margin-left:300px;width:400px;">
+                <div style="margin-left:350px;width:400px;">
                     <h3 style="color:azure">Search</h3>
                     <div id="custom-search-input">
                         <div class="input-group col-md-12" style="padding-right:0px">
