--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -81,6 +81,9 @@
         .e-grid td.e-active, .e-grid .e-form-titlebar {
             background: #ee0979 !important;
         }
+        .e-grid .e-editcell, .e-grid .e-form-container, .e-grid .e-externalformedit, .e-grid .e-tabletd, .e-grid .e-rowcell{
+            padding:17px !important;
+        }
     </style>
     <link href="~/Scripts/js/daterangepicker.css" rel="stylesheet" />
 }
@@ -126,7 +129,7 @@
             <div>
 
             </div>
-            <div class="searchresult" style="margin-top:30px;display:none">
+            <div class="searchresult" style="margin-top:30px;display:none;margin-left: -81px !important;">
 
                 <div id="datepicker" class="picker-bd-view" style="margin-bottom: 65px;">
                     <span id="datepicker-heading">Created On</span><br />
