--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -130,20 +130,21 @@
             <div>
 
             </div>
-            <div class="searchresult" style="margin-top:30px;display:block;margin-left: -81px !important;">
-                <select style="float: right; padding: 6px; margin-left :23px; margin-top :23px;" class="select-dropdown">
+            <div class="searchresult" style="margin-top:30px;display:none;margin-right: 50px !important;">
+                <select style="float: right; padding: 6px; margin-left :23px;" class="select-dropdown">
                     <option value="0" selected>All</option>
                     <option value="1">Stackoverflow</option>
                     <option value="1">Github</option>
                 </select>
                 <div id="datepicker" class="picker-bd-view" style="margin-bottom: 65px;">
-                    <span id="datepicker-heading">Created On</span><br />
+                   
                     <div id="reportrange" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc;">
                         <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>&nbsp;
                         <span>Select Date</span> <b class="caret"></b>
                     </div>
                 </div>
-                <div class="result-data">
+                <div id="datepicker-heading" style="color:azure;font-size:30px;">Search Result</div>
+                <div class="result-data" style="margin-top: 50px;">
 
                     <div id="gridsearchResult">
                     </div>
