--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
             width: 109%;
             padding: 20px;
             margin-top: 90px;
-            margin-left:-70px;
+            margin-left:-129px;
             padding-left:40px;
         }
 
@@ -113,11 +113,11 @@
     <section style="margin-top:40px;position:absolute;padding:0px;">
         <div class="container" style="min-height:250px;">
             <div class="row">
-                <div style="margin-left:350px;width:400px;">
-                    <h3 style="color:azure">Search</h3>
+                <div style="margin-left:350px;width:400px;margin-top:50px;">
+                    <h3 style="color:azure"></h3>
                     <div id="custom-search-input">
                         <div class="input-group col-md-12" style="padding-right:0px">
-                            <input type="text" class="form-control col-md-11" id="searchtext" placeholder="Search text" />
+                            <input type="text" class="form-control col-md-11" id="searchtext" placeholder="Search" />
                             <span class="input-group-btn">
                                 <button class="btn btn-info btn-lg" id="searchbutton" type="button" style="border-radius:0px">
                                     <i class="fa fa-search"></i>
@@ -130,7 +130,7 @@
             <div>
 
             </div>
-            <div class="searchresult" style="margin-top:30px;display:none;margin-right: 50px !important;">
+            <div class="searchresult" style="margin-top:30px;display:none;margin-right: 50px !important;margin-left:-85px;">
                 <select style="float: right; padding: 6px; margin-left :23px;" class="select-dropdown">
                     <option value="0" selected>All</option>
                     <option value="1">Stackoverflow</option>
